# NBody-Simulator-CPP

./: CMakeLists.txt  LICENSE  README.md
include/: Body.hpp  Renderer.hpp  Scenarios.hpp  Simulator.hpp  Vector2.hpp
src/: Body.cpp  Renderer.cpp  Scenarios.cpp  Simulator.cpp  main.cpp
tests/: test_main.cpp
